--- a/1.html
+++ b/1.html
@@ -1,4 +1,14 @@
 <h1><font color="red">Wonhyuk's Homepage</h1>
-
+<u1>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+</u1>
+<u1>
+  <li>egoing</li>
+  <li>duru</li>
+  <li>other</li>
+</u1>    
+  
 <h2> I LOVE "JENNY" </h2>
-  <iframe width="789" height="444" src="https://www.youtube.com/embed/ytuIIuX3Ryc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="789" height="444" src="https://www.youtube.com/embed/ytuIIuX3Ryc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
