--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
-<h1><font color="red">Wonhyuk's Homepage</h1>
+<h1><font color="red">Wonhyuk's Homepage</font></h1>
 <u1>
-  <li>HTML</li>
-  <li>CSS</li>
+  <li>제니</li>
+  <li>YG</li>
   <li>JavaScript</li>
 </u1>
 <u1>
@@ -10,5 +10,5 @@
   <li>other</li>
 </u1>    
   
-<h2> I LOVE "JENNY" </h2>
+  <h2><font color="pink"> I LOVE "JENNY" </font></h2>
 <iframe width="789" height="444" src="https://www.youtube.com/embed/ytuIIuX3Ryc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
