--- a/1.html
+++ b/1.html
@@ -1,14 +1,42 @@
-<h1><font color="red">Wonhyuk's Homepage</font></h1>
-<u1>
-  <li>제니</li>
-  <li>YG</li>
-  <li>JavaScript</li>
-</u1>
-<u1>
-  <li>egoing</li>
-  <li>duru</li>
-  <li>other</li>
-</u1>    
+<!docutype html>
+<html>
+<head>
+  <title>HTML 실습</title>
+  <meta charset="utf-8">
+</head>
+<body>
+  <h1><a href="C:\Users\hanauser23\Desktop\Web\index.html">WEB</h1> 
+  <ol>
+  <li>
+  <a href="https://alphamega89.github.io/hana-web/1.html" target="_blank">
+  HTML
+  </a></li>
   
+  <li><a href="https://github.com/egoingsb/hana2" target="_blank">CSS</a></li>
+  <li>JAVA</li>
+ </ol>
+ <ul><h2>
+  <li>C++</li>
+  <li>파이썬</li>
+  <li>R</li>
+ </ul>
+ </h2>
+ 
+<h2>HTML</h2>
+<br>
+<b>HTML</b> is <u>Hyper Text Markup Language</u>
+<br>
+<br>
+<br>
+<a href="https://seomal.org/" target="_blank"> seomal </a>
+ <br>
+ <a href="https://opentutorials.org" target="_blank"> tutorial </a>
+ <br>
+ <a href="https://unsplash.com/" target="_blank"> unsplash </a>
+ <br>
+ <a href="https://source.unsplash.com/" target="_blank"> unsplash open </a>
+</body>
+</html>
+
   <h2><font color="pink"> I LOVE "JENNY" </font></h2>
 <iframe width="789" height="444" src="https://www.youtube.com/embed/ytuIIuX3Ryc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
