--- a/1.html
+++ b/1.html
@@ -1,24 +1,24 @@
-<!docutype html>
+﻿<!docutype html>
 <html>
 <head>
   <title>HTML 실습</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="C:\Users\hanauser23\Desktop\Web\index.html">WEB</h1> 
+  <h1><a href="C:\Users\hanauser50\Desktop\html\1.html">원혁이의 실습</h1> 
   <ol>
   <li>
-  <a href="https://alphamega89.github.io/hana-web/1.html" target="_blank">
-  HTML
+  <a href="https://naver.com" target="_blank">
+  네이버
   </a></li>
   
-  <li><a href="https://github.com/egoingsb/hana2" target="_blank">CSS</a></li>
-  <li>JAVA</li>
+  <li><a href="https://google.com" target="_blank">구글</a></li>
+  <li><a href="https://nate.com">네이트</a></li>
  </ol>
  <ul><h2>
-  <li>C++</li>
-  <li>파이썬</li>
-  <li>R</li>
+  <li>블랙핑크</li>
+  <li>여자친구</li>
+  <li>트와이스</li>
  </ul>
  </h2>
  
