--- a/1.html
+++ b/1.html
@@ -1,4 +1,6 @@
-﻿<!docutype html>
+﻿<span style='color:blue"><MARQUEE WIDTH=2000 SCROLLAMOUNT=2000>*원혁이가 최고다*</FONT></MARQUEE>
+
+<!docutype html>
 <html>
 <head>
   <title>HTML 실습</title>
