--- a/1.html
+++ b/1.html
@@ -1,4 +1,4 @@
-﻿<span style='color:blue"><MARQUEE WIDTH=2000 SCROLLAMOUNT=2000>*원혁이가 최고다*</FONT></MARQUEE>
+﻿<span style="color:blue"><MARQUEE WIDTH=3000 SCROLLAMOUNT=1000>*INNOVATION & ICT GROUP의 최원혁 대리가 최고다 현지는 별로*</FONT></MARQUEE>
 
 <!docutype html>
 <html>
