--- a/1.html
+++ b/1.html
@@ -1,44 +1,49 @@
-﻿<span style="color:blue"><MARQUEE WIDTH=3000 SCROLLAMOUNT=1000>*INNOVATION & ICT GROUP의 최원혁 대리가 최고다 현지는 별로*</FONT></MARQUEE>
-
-<!docutype html>
+<!doctype html>
 <html>
-<head>
-  <title>HTML 실습</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="C:\Users\hanauser50\Desktop\html\1.html">원혁이의 실습</h1> 
-  <ol>
-  <li>
-  <a href="https://naver.com" target="_blank">
-  네이버
-  </a></li>
-  
-  <li><a href="https://google.com" target="_blank">구글</a></li>
-  <li><a href="https://nate.com">네이트</a></li>
- </ol>
- <ul><h2>
-  <li>블랙핑크</li>
-  <li>여자친구</li>
-  <li>트와이스</li>
- </ul>
- </h2>
- 
-<h2>HTML</h2>
-<br>
-<b>HTML</b> is <u>Hyper Text Markup Language</u>
-<br>
-<br>
-<br>
-<a href="https://seomal.org/" target="_blank"> seomal </a>
- <br>
- <a href="https://opentutorials.org" target="_blank"> tutorial </a>
- <br>
- <a href="https://unsplash.com/" target="_blank"> unsplash </a>
- <br>
- <a href="https://source.unsplash.com/" target="_blank"> unsplash open </a>
-</body>
-</html>
 
-  <h2><font color="pink"> I LOVE "JENNY" </font></h2>
-<iframe width="789" height="444" src="https://www.youtube.com/embed/ytuIIuX3Ryc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<head>
+    <title>WEB - html</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+</head>
+
+<body>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="container">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <input type="button" value="night" onclick="
+                // 만약 이 버튼의 value 값이 night라면
+                if(this.value === 'night'){
+                    Color.toNight();
+                    this.value = 'day';
+                } else {// 아니라면
+                    Color.toDay();
+                    this.value = 'night';
+                }
+            ">
+            <input type="text" onchange="alert('changed');">
+            <input type="button" value="night">
+            <input type="button" value="night" onclick="
+                var body = document.querySelector('body');
+                body.style.backgroundColor = 'black';
+                body.style.color = 'white';
+            ">
+            <input type="button" value="day" onclick="
+                var body = document.querySelector('body');
+                body.style.backgroundColor = 'white';
+                body.style.color = 'black';
+            ">
+            <h2>HTML</h2>
+            <a target="_blank" href="http://w3c.org">HTML</a> is <u>Hyper<strong>Text</strong> Markup</u> Langauge
+        </div>
+    </div>
+
+</body>
+
+</html>
