--- a/2.html
+++ b/2.html
@@ -1,17 +1,36 @@
-﻿<h1><span style="color:blue"><marquee>최원혁 대리</FONT></marquee></h1>
-
-<!docutype html>
+<!doctype html>
 <html>
+
 <head>
-  <title>HTML 실습</title>
-  <meta charset="utf-8">
+    <title>WEB - html</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
-  <h1><a href="C:\Users\hanauser50\Desktop\html\1.html">원혁이의 실습</h1> 
-  <ol>
-  <li>
-  <a href="https://search.naver.com/search.naver?where=nexearch&query=%EC%84%9C%EC%9A%B8+%EB%AF%B8%EC%84%B8%EB%A8%BC%EC%A7%80&ie=utf8&sm=tab_she&qdt=0">
-  서울 미세먼지
-  </a></li>
-  
-  <li><a href="https://search.naver.com/search.naver?where=nexearch&query=%EC%9D%B8%EC%B2%9C+%EB%AF%B8%EC%84%B8%EB%A8%BC%EC%A7%80&ie=utf8&sm=tab_she&qdt=0">인천 미세먼지</a></li>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="container">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <input type="button" value="night" onclick="
+                // 만약 이 버튼의 value 값이 night라면
+                if(this.value === 'night'){
+                    Color.toNight();
+                    this.value = 'day';
+                } else {// 아니라면
+                    Color.toDay();
+                    this.value = 'night';
+                }
+            ">
+            <h2>CSS</h2>
+            CSS is cascading stylesheet.
+        </div>
+    </div>
+</body>
+
+</html>
